Leke litt med å genered kotlin kode fra swagger spec
